--- a/conf/application.conf
+++ b/conf/application.conf
@@ -50,7 +50,7 @@ akka {
     log-remote-lifecycle-events = off
     netty.tcp {
       //"akka.remote.netty.tcp.port=8000"
-      hostname = "127.0.0.1"
+      hostname = "192.168.1.123"
       port = 8000
     }
   }
@@ -69,4 +69,6 @@ akka {
     auto-down-unreachable-after = 10s
   }
 }
+
+akka.extensions = [ "akka.cluster.metrics.ClusterMetricsExtension" ]
 
