--- a/conf/application.conf
+++ b/conf/application.conf
@@ -42,6 +42,8 @@ play.i18n.langs = [ "en" ]
 
 # You can disable evolutions for a specific datasource if necessary
 # play.evolutions.db.default.enabled=false
+
+# CLUSTER CONFIGURATIONS ········································
 akka {
   actor {
     provider = "akka.cluster.ClusterActorRefProvider"
@@ -50,7 +52,8 @@ akka {
     log-remote-lifecycle-events = off
     netty.tcp {
       //"akka.remote.netty.tcp.port=8000"
-      hostname = "192.168.1.123"
+      //hostname = "192.168.1.123"
+      hostname = "127.0.0.1"
       port = 8000
     }
   }
@@ -64,11 +67,46 @@ akka {
       //"akka.tcp://application@127.0.0.1:8000",
       //"akka.tcp://application@127.0.0.1:8001"]
 
-      "akka.tcp://application@192.168.1.123:8000"]
+      //"akka.tcp://application@192.168.1.123:8000"]
+      "akka.tcp://application@127.0.0.1:8000"]
 
     auto-down-unreachable-after = 10s
   }
 }
+# CLUSTER CONFIGURATIONS END ········································
+
+# ADAPTATIVE LOAD BALANCE CONFIGURATIONS ········································
 
 akka.extensions = [ "akka.cluster.metrics.ClusterMetricsExtension" ]
+
+# //#min-nr-of-members
+akka.cluster.min-nr-of-members = 1
+# //#min-nr-of-members
+
+# //#role-min-nr-of-members
+#akka.cluster.role {
+#  frontend.min-nr-of-members = 1
+#  backend.min-nr-of-members = 2
+#}
+# //#role-min-nr-of-members
+
+# //#adaptive-router
+akka.actor.deployment {
+  /user/router = {
+    router = adaptive-group
+    # metrics-selector = heap
+    # metrics-selector = load
+    # metrics-selector = cpu
+    metrics-selector = mix
+    nr-of-instances = 100
+    routees.paths = ["application/user/ChatManager"]
+    cluster {
+      enabled = on
+      use-role = backend
+      allow-local-routees = off
+    }
+  }
+}
+# //#adaptive-router
+# ADAPTATIVE LOAD BALANCE CONFIGURATIONS END ········································
 
