Añadido promise-future a application y router sin funcionar

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -92,14 +92,14 @@ akka.cluster.min-nr-of-members = 1
 
 # //#adaptive-router
 akka.actor.deployment {
-  /user/router = {
+  /ChatManager/router = {
     router = adaptive-group
     # metrics-selector = heap
     # metrics-selector = load
     # metrics-selector = cpu
     metrics-selector = mix
     nr-of-instances = 100
-    routees.paths = ["application/user/ChatManager"]
+    routees.paths = ["/application/user/ChatManager"]
     cluster {
       enabled = on
       use-role = backend
