--- a/conf/application.conf
+++ b/conf/application.conf
@@ -52,9 +52,9 @@ akka {
     log-remote-lifecycle-events = off
     netty.tcp {
       //"akka.remote.netty.tcp.port=8000"
-      //hostname = "192.168.1.204"
-      hostname = "127.0.0.1"
-      port = 8000
+      hostname = "192.168.1.204"
+      //hostname = "127.0.0.1"
+      port = 8001
     }
   }
 
@@ -67,8 +67,8 @@ akka {
       //"akka.tcp://application@127.0.0.1:8000",
       //"akka.tcp://application@127.0.0.1:8001"]
 
-      //"akka.tcp://application@192.168.1.204:8000"]
-      "akka.tcp://application@127.0.0.1:8000"]
+      "akka.tcp://application@192.168.1.204:8000"]
+      //"akka.tcp://application@127.0.0.1:8000"]
 
     auto-down-unreachable-after = 10s
   }
@@ -80,7 +80,7 @@ akka {
 akka.extensions = [ "akka.cluster.metrics.ClusterMetricsExtension" ]
 
 # //#min-nr-of-members
-akka.cluster.min-nr-of-members = 1
+//akka.cluster.min-nr-of-members = 1
 # //#min-nr-of-members
 
 # //#role-min-nr-of-members
@@ -93,19 +93,20 @@ akka.cluster.min-nr-of-members = 1
 # //#adaptive-router
 akka.actor.deployment {
   /ChatManager/router = {
-    router = adaptive-group
-    //router = round-robin-group
+    //router = adaptive-group
+    router = round-robin-group
     # metrics-selector = heap
     # metrics-selector = load
     # metrics-selector = cpu
-    metrics-selector = mix
+    //metrics-selector = mix
     //nr-of-instances = 100
     routees.paths = ["/user/ChatManager"]
                      //"akka.tcp://application@192.168.1.204:8000/user/ChatManager"]
     cluster {
       enabled = on
     //  # use-role = backend
-    //  allow-local-routees = off
+      //allow-local-routees = off
+      allow-local-routees = off
     }
   }
 }
