--- a/conf/application.conf
+++ b/conf/application.conf
@@ -80,7 +80,7 @@ akka {
 akka.extensions = [ "akka.cluster.metrics.ClusterMetricsExtension" ]
 
 # //#min-nr-of-members
-//akka.cluster.min-nr-of-members = 1
+akka.cluster.min-nr-of-members = 2
 # //#min-nr-of-members
 
 # //#role-min-nr-of-members
