--- a/conf/application.conf
+++ b/conf/application.conf
@@ -94,7 +94,7 @@ akka.cluster.min-nr-of-members = 2
 akka.actor.deployment {
   /ChatManager/router = {
     //router = adaptive-group
-    router = round-robin
+    router = round-robin-group
     # metrics-selector = heap
     # metrics-selector = load
     # metrics-selector = cpu
