FUNCIONANDO COÑO!!! FUNCIONANDO!!!!!!!!!!!!!!!

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -93,20 +93,25 @@ akka.cluster.min-nr-of-members = 2
 # //#adaptive-router
 akka.actor.deployment {
   /ChatManager/router = {
-    //router = adaptive-group
-    router = round-robin-group
+    router = adaptive-group
     # metrics-selector = heap
     # metrics-selector = load
     # metrics-selector = cpu
-    //metrics-selector = mix
-    //nr-of-instances = 100
+    metrics-selector = mix
+    nr-of-instances = 100
+
+    //router = round-robin-group
+    //nr-of-instances = 3
+
+    //router = random-pool
+    //nr-of-instances = 3
+
     routees.paths = ["/user/ChatManager"]
                      //"akka.tcp://application@192.168.1.204:8000/user/ChatManager"]
     cluster {
       enabled = on
-    //  # use-role = backend
-      //allow-local-routees = off
-      allow-local-routees = off
+      //use-role = backend
+      allow-local-routees = on
     }
   }
 }
