Añadido log heap jvm

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -94,10 +94,10 @@ akka.cluster.min-nr-of-members = 2
 akka.actor.deployment {
   /ChatManager/router = {
     router = adaptive-group
-    # metrics-selector = heap
+    metrics-selector = heap
     # metrics-selector = load
     # metrics-selector = cpu
-    metrics-selector = mix
+    # metrics-selector = mix
     nr-of-instances = 100
 
     //router = round-robin-group
