--- a/conf/application.conf
+++ b/conf/application.conf
@@ -52,7 +52,7 @@ akka {
     log-remote-lifecycle-events = off
     netty.tcp {
       //"akka.remote.netty.tcp.port=8000"
-      hostname = "192.168.43.121"
+      hostname = "localhost"
       //hostname = "127.0.0.1"
       port = 8000
     }
@@ -67,7 +67,7 @@ akka {
       //"akka.tcp://application@127.0.0.1:8000",
       //"akka.tcp://application@127.0.0.1:8001"]
 
-      "akka.tcp://application@192.168.43.121:8000"]
+      "akka.tcp://application@localhost:8000"]
       //"akka.tcp://application@127.0.0.1:8000"]
 
     auto-down-unreachable-after = 10s
